--- a/src/shared/styles/reset.scss
+++ b/src/shared/styles/reset.scss
@@ -56,6 +56,7 @@ input, textarea, button, select {
     font-size: inherit;
     color: inherit;
     background-color: transparent;
+    outline: none;
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
